Updated index file for hosted test deployment

--- a/index.html
+++ b/index.html
@@ -1,5 +1,28 @@
-<p>CSGO vercel test deployment</p>
-<br>
-<h1>Endpoints:</h1>
-<br>
-<p>/api/inventory?id={steamid}</p>
+<!DOCTYPE html>
+<html>
+
+<body>
+
+    <p>get-csgo-inventory NPM Module</p>
+    <br>
+    <h1>API Endpoints:</h1>
+    <br>
+    <p>/api/inventory?id={steamid}</p>
+    <br>
+    <h2>Try it in the browser:</h2><br>
+
+    <form action="https://csgo-dev.vercel.app/api/inventory">
+        <label for="id">Enter a Steam ID:</label><br><br>
+        <input type="text" id="id" name="id"><br><br>
+        <input type="submit" value="Get CSGO Inventory">
+    </form>
+    <br><br>
+
+</body>
+
+<footer>
+    <p>This module is OpenSource and hosted on Github:<br>
+        <a href="https://github.com/pddstudio/get-csgo-inventory">View Project on GitHub</a></p>
+</footer>
+
+</html>
